# langgraph-mvp

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: test.yaml
scripts/: generate_data.py  main.ipynb
scripts/app/: .chat_app_messages.sqlite  chat_app.html  chat_app.py  chat_app.ts
src/: main.py  utils.py
src/ai/: config.py  graph.py  schemas.py  utils.py
src/ai/agents/: customer.py  humor.py  math.py  report.py  supervisor.py
src/ai/tools/: customer.py  kpi.py
src/repositories/: customer.py  kpi.py
