[project]
name = "landgraph-pydantic-mvp"
version = "0.1.0"
description = "A minimal agentic example with LangGraph and Pydantic"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "fastapi-cli>=0.0.5",
    "langchain>=0.3.24",
    "langgraph>=0.4.1",
    "openai>=1.76.2",
    "pydantic-ai>=0.1.8",
    "httpx>=0.28.1",
    "uvicorn>=0.34.2",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.2",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/main"]

